--- a/Weather.Application.Service/Weather.Application.Service.csproj
+++ b/Weather.Application.Service/Weather.Application.Service.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Builders\" />
+    <Folder Include="Factories\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Weather.Application.Domain\Weather.Application.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Class1.cs" />
+    <Compile Remove="Builders\WeatherBuilderDirectory.cs" />
+  </ItemGroup>
 </Project>
