--- a/Weather.Application/appsettings.json
+++ b/Weather.Application/appsettings.json
@@ -1,3 +1,9 @@
 ﻿{
-
+  "apiSettings": {
+    "baseUrl": "http://api.openweathermap.org/data/2.5/",
+    "apiKey": "108b11a0259601a3f430dfa5bc4957a4"
+  },
+  "logging": {
+    "loggingLevel":  "Critical"
+  }
 }
