--- a/Weather.Application/Weather.Application.ConsoleApp.csproj
+++ b/Weather.Application/Weather.Application.ConsoleApp.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Managers\" />
+    <Folder Include="ContainerRegistration\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
